--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+endereco.server=srv-ceesp.proj.ufsm.br:8097
 server.port=8080
 spring.jackson.time-zone=America/Sao_Paulo
 jwt.secret=&vLq!5yAK6y5c2$$
