--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ endereco.server=srv-ceesp.proj.ufsm.br:8097
 server.port=8080
 spring.jackson.time-zone=America/Sao_Paulo
 jwt.secret=&vLq!5yAK6y5c2$$
-#spring.datasource.url=jdbc:postgresql://localhost:5432/pila
-#spring.datasource.username=pila
-#spring.datasource.password=coin
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/pila
+spring.datasource.username=pila
+spring.datasource.password=coin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
