--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@ endereco.server=srv-ceesp.proj.ufsm.br:8097
 server.port=8080
 spring.jackson.time-zone=America/Sao_Paulo
 jwt.secret=&vLq!5yAK6y5c2$$
-spring.datasource.url=jdbc:postgresql://localhost:5432/pila
-spring.datasource.username=pila
-spring.datasource.password=coin
+spring.datasource.url=jdbc:postgresql://localhost:5432/pilacoin
+spring.datasource.username=postgres
+spring.datasource.password=nattyDB
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
