--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ endereco.server=srv-ceesp.proj.ufsm.br:8097
 server.port=8080
 spring.jackson.time-zone=America/Sao_Paulo
 jwt.secret=&vLq!5yAK6y5c2$$
-spring.datasource.url=jdbc:postgresql://localhost:5432/pila
+spring.datasource.url=jdbc:postgresql://localhost:5432/pilacoin
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=nattyDB
 spring.jpa.hibernate.ddl-auto=update
 
 org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
+
+
