--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ jwt.secret=&vLq!5yAK6y5c2$$
 spring.datasource.url=jdbc:postgresql://localhost:5432/pilacoin
 spring.datasource.username=postgres
 spring.datasource.password=nattyDB
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
